implementacao das funcionalidades de gerenciamento de empresas, estudios e equipamentos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ exclusao.realizada.sucesso = Cliente removido com sucesso.
 atualizacao.realizada.sucesso = Dados do cliente atualizados com sucesso.
 email.cliente.ja.cadastrado = Já existe um cliente cadastrado com o e-mail informado.
 idade.cliente.insuficiente = É necessário ser maior de 16 anos para se cadastrar no sistema.
+
+estudio.atualizado.sucesso = Dados do estudio atualizados com sucesso.
